# cat-wallpaper

./: .gitignore  README.md  package.json  pnpm-lock.yaml
apps/api/: .env.example  pyproject.toml
apps/api/app/: fal_client.py  main.py  settings.py  storage.py  validation.py
apps/api/tests/: test_fal_client.py  test_generate_image.py  test_generate_video.py  test_validation.py
apps/web/: next.config.js  package.json
apps/web/app/: globals.css  page.tsx
docs/: CONFIGURATION.md  EXAMPLES.md
docs/plans/: 2026-01-27-cat-wallpaper-mvp-design.md  2026-01-28-cat-wallpaper-mvp-implementation.md
scripts/: restart.sh  start.sh  stop.sh
